--- a/templates/result.html
+++ b/templates/result.html
@@ -6,6 +6,10 @@
 <h1>Current Weather Update</h1>
 <table class="table table-striped">
 	<tr>
+		<td>Date</td>
+		<td>{{context['datetime']}}</td>
+	</tr>
+	<tr>
 		<td>City</td>
 		<td>{{context['city']}}</td>
 	</tr>
